fixing z-index of root navbar div

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,6 @@
 .Navbar {
     position: sticky; top: 0;
+    z-index: 1000;
 }
 
 .Navbar .bar {
